# jinja2content

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/jinja2content/: __init__.py  jinja2content.py
