[project]
name = "pelican-jinja2content"
version = "1.0.1"
description = "Pelican plugin for using Jinja template code within post content"
authors = [{name = "Justin Mayer", email = "entroP@gmail.com"}]
license = {text = "AGPL-3.0"}
readme = "README.md"
keywords = ["pelican", "plugin", "jinja", "jinja2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = "~=3.9"
dependencies = [
    "pelican>=4.5",
]

[project.urls]
"Homepage" = "https://github.com/pelican-plugins/jinja2content"
"Issue Tracker" = "https://github.com/pelican-plugins/jinja2content/issues"
"Changelog" = "https://github.com/pelican-plugins/jinja2content/blob/main/CHANGELOG.md"
"Funding" = "https://donate.getpelican.com/"

[project.optional-dependencies]
markdown = ["markdown>=3.4"]

[dependency-groups]
lint = [
    "invoke>=2.2",
    "ruff>=0.11.0,<1.0.0",
]

[tool.pdm.build]
source-includes = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]
includes = ["pelican/"]
excludes = ["**/.DS_Store", "**/test_data/**", "tasks.py"]

[tool.autopub]
project-name = "Jinja2Content"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PL",  # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  "D100",    # missing docstring in public module
  "D101",    # missing docstring in public class
  "D102",    # missing docstring in public method
  "D104",    # missing docstring in public package
  "D107",    # missing docstring in `__init__`
  "D203",    # blank line before class docstring
  "D213",    # multi-line docstring summary should start at the second line
  "ISC001",  # disabled so `ruff format` works without warning
  "PLW2901", # `with` statement variable `text` overwritten by assignment target
  "RUF005",  # avoid string concatenation
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pelican"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
